# rateMyProfessorApi-rs

./: .env  Baruch College.json  CUNY City College of New York.json  Cargo.toml  City College of New York.json  README.md  all_search_result.json  baruch_college_professor_list.json  diesel.toml  professor_comments.json  professor_comments_data.json  random.json  test.json
src/: api.rs  experimental.rs  features.rs  graphql_queries.rs  impl_organizer.rs  lib.rs  main.rs  methods.rs  struct_organizer.rs  test.rs
