[package]
name = "rate_my_professor_api_rs"
version = "0.1.0"                 # in development
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = { version = "4.9.0" }
awc = { version = "3.5.1", features = ["openssl"] }
diesel = { version = "2.2.6", features = ["postgres"] }
dotenvy = "0.15.7"
openssl = "0.10.68"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "*"
tokio-macros = "2.5.0"
filepath = "0.2.0"

[[bin]]
name = "api-test"
path = "src/api.rs"

[[bin]]
name = "api-experimental"
path = "src/experimental.rs"

[[bin]]
name = "test-main"
path = "src/main.rs"

[lib]
name = "rateMyProfessorApi_rs"
path = "src/lib.rs"
# /Users/ayandas/Library/Application Support/Postgres/RateMyProfessorPackage
