[package]
name = "rate_my_professor_api_rs"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cargo package that serves as an API wrapper over Rate My Professor. Users can get information about a particular college, get information about a particular professor, retrieve list of all the professors within a current college registered within Rate My Professor and fetch comments corresponding to a particular professor within a specific university."
repository = "https://github.com/DeveloperMindset123/rateMyProfessorApi-rs"
readme = "./README.md"


[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = { version = "4.9.0" }
awc = { version = "3.5.1", features = ["openssl"] }
openssl = "0.10.68"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.95"
tokio-macros = "2.5.0"
filepath = "0.2.0"
predicates = "3.1.3"


# [[bin]]
# name = "api-features"
# path = "src/features.rs"

[[bin]]
name = "test-bin-methods"
path = "src/bin/execute_methods.rs"

[[bin]]
name = "test-bin-features"
path = "src/bin/execute_features.rs"

[lib]
name = "rateMyProfessorApi_rs"
path = "src/lib.rs"
# /Users/ayandas/Library/Application Support/Postgres/RateMyProfessorPackage
